폰트 에러 수정 및 다운로드

--- a/colab/00-colab.ipynb
+++ b/colab/00-colab.ipynb
@@ -29,21 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "db84aa8e-3657-4160-b91c-8300cb4a2c0a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "단어와 임베딩 벡터:\n",
-      "귤: [0 6]\n",
-      "딸기: [0 5]\n",
-      "수박: [1 6]\n",
-      "미소짓다: [6 1]\n",
-      "화내다: [6 0]\n",
-      "웃다: [5 0]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# 단어와 임베딩 벡터 정의\u001b[39;00m\n\u001b[1;32m      4\u001b[0m word_embeddings \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m귤\u001b[39m\u001b[38;5;124m'\u001b[39m: np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m6\u001b[39m]),\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m딸기\u001b[39m\u001b[38;5;124m'\u001b[39m: np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m5\u001b[39m]),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m웃다\u001b[39m\u001b[38;5;124m'\u001b[39m: np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m     11\u001b[0m }\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
    ],
@@ -320,28 +318,28 @@
     "\n",
     "---\n",
     "\n",
-    "**Part2**에서 배울 내용:\r\n",
-    "\r\n",
-    "1교시: 일단 도전하는 나의 첫 딥러닝\r\n",
-    "- <실습> 딥러닝의 기초\r\n",
-    "\r\n",
-    "2교시: 딥러닝이 잘되는 이유를 이해하기\r\n",
-    "- <실습> 데이터 처리 기법\r\n",
-    "\r\n",
-    "3교시: 이론이 실제 모델이 되기까지\r\n",
-    "- <실습> 실데이터로 도전하는 모델\r\n",
-    "\r\n",
-    "4교시: 제대로 도전하는 딥러닝\r\n",
-    "- <실습> 컨볼루션 신경망 실행하기\r\n",
-    "- <실습> 전이학습 실행하기\r\n",
-    "\r\n",
-    "5교시: 조금씩 맛보는 고급 딥러닝\r\n",
-    "- <실습> 설명 가능한 딥러닝 모델 만들기\r\n",
-    "- <실습> 생성형 이미지 딥러닝 실행\r\n",
-    "\r\n",
-    "6교시: 챗GPT의 원리, 트랜스포머 이해하기\r\n",
-    "- <실습> 어텐션의 핵심 원리\r\n",
-    "- <실습> 트랜스포머의 기초\r\n"
+    "**Part2**에서 배울 내용:\n",
+    "\n",
+    "1교시: 일단 도전하는 나의 첫 딥러닝\n",
+    "- <실습> 딥러닝의 기초\n",
+    "\n",
+    "2교시: 딥러닝이 잘되는 이유를 이해하기\n",
+    "- <실습> 데이터 처리 기법\n",
+    "\n",
+    "3교시: 이론이 실제 모델이 되기까지\n",
+    "- <실습> 실데이터로 도전하는 모델\n",
+    "\n",
+    "4교시: 제대로 도전하는 딥러닝\n",
+    "- <실습> 컨볼루션 신경망 실행하기\n",
+    "- <실습> 전이학습 실행하기\n",
+    "\n",
+    "5교시: 조금씩 맛보는 고급 딥러닝\n",
+    "- <실습> 설명 가능한 딥러닝 모델 만들기\n",
+    "- <실습> 생성형 이미지 딥러닝 실행\n",
+    "\n",
+    "6교시: 챗GPT의 원리, 트랜스포머 이해하기\n",
+    "- <실습> 어텐션의 핵심 원리\n",
+    "- <실습> 트랜스포머의 기초\n"
    ]
   },
   {
@@ -373,16 +371,21 @@
     "import requests\n",
     "\n",
     "# 나눔고딕 폰트 다운로드\n",
-    "!wget https://github.com/scarsty/malware_analysis/releases/download/0.0.1/NanumGothic.ttf\n",
+    "!wget https://github.com/google/fonts/raw/main/ofl/nanumgothic/NanumGothic-Regular.ttf -O NanumGothic.ttf\n",
     "\n",
     "# 나눔고딕 폰트 설정\n",
-    "font_path = '/content/NanumGothic.ttf'\n",
+    "font_path = './NanumGothic.ttf'  # Updated path to explicitly refer to the current directory\n",
     "font_name = fm.FontProperties(fname=font_path).get_name()\n",
+    "\n",
+    "# 폰트 등록\n",
+    "fm.fontManager.addfont(font_path)\n",
+    "\n",
+    "# Matplotlib 설정 업데이트\n",
     "plt.rcParams['font.family'] = font_name\n",
     "\n",
     "# 테스트: 한글 텍스트 표시\n",
     "plt.text(0.5, 0.5, '테스트: 한글 폰트', ha='center', va='center', fontsize=20)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -434,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
