--- a/colab/01-colab.ipynb
+++ b/colab/01-colab.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "MN8oWQNERNLD"
    },
@@ -52,11 +52,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "k9BogLfeRNLF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'data'...\n",
+      "remote: Enumerating objects: 32, done.\u001b[K\n",
+      "remote: Counting objects: 100% (32/32), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (27/27), done.\u001b[K\n",
+      "remote: Total 32 (delta 7), reused 23 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
+      "Receiving objects: 100% (32/32), 467.96 KiB | 7.43 MiB/s, done.\n",
+      "Resolving deltas: 100% (7/7), done.\n"
+     ]
+    }
+   ],
    "source": [
     "# 깃허브에 준비된 데이터를 가져옵니다.\n",
     "!git clone https://github.com/taehojo/data.git   \n",
@@ -85,11 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "BEfa9azNRNLG"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.11/site-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# 딥러닝 모델의 구조를 결정합니다.\n",
     "model = Sequential()                                                   \n",
@@ -108,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "6Puv4ovSRNLH",
     "outputId": "730b4d42-4c21-48b5-b0a7-50833ddb451f"
@@ -119,15 +142,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "30/30 [==============================] - 1s 2ms/step - loss: 0.4955 - accuracy: 0.8426\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.8680 - loss: 1.7831       \n",
       "Epoch 2/5\n",
-      "30/30 [==============================] - 0s 2ms/step - loss: 0.4502 - accuracy: 0.8511\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8469 - loss: 0.7664 \n",
       "Epoch 3/5\n",
-      "30/30 [==============================] - 0s 2ms/step - loss: 0.4412 - accuracy: 0.8511\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8246 - loss: 0.4734 \n",
       "Epoch 4/5\n",
-      "30/30 [==============================] - 0s 2ms/step - loss: 0.4613 - accuracy: 0.8511\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8806 - loss: 0.3686 \n",
       "Epoch 5/5\n",
-      "30/30 [==============================] - 0s 2ms/step - loss: 0.4373 - accuracy: 0.8511\n"
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8203 - loss: 0.4601 \n"
      ]
     }
    ],
@@ -185,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
